--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,4 +1,5 @@
 https.private.port=8081
 global.weather.service.url= http://localhost:8080/GlobalWeather
 inbound.user=basicauthuser
-inbound.password=NQt8nA64uN9BwDs7
+inbound.password=testAPI
+key.password=password
